// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DotSteps renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  cursor: pointer;
}

.emotion-4.emotion-4 {
  margin-right: 8px;
}

.emotion-7 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.emotion-7.emotion-7 {
  margin-right: 0;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      class="emotion-3 emotion-4 emotion-5"
    />
    <div
      class="emotion-3 emotion-7 emotion-5"
    />
  </div>
</DocumentFragment>
`;

exports[`DotSteps renders correctly useState function 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.emotion-4.emotion-4 {
  margin-right: 8px;
}

.emotion-7 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  cursor: pointer;
}

.emotion-7.emotion-7 {
  margin-right: 8px;
}

.emotion-31 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.emotion-31.emotion-31 {
  margin-right: 0;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      class="emotion-3 emotion-4 emotion-5"
    />
    <div
      class="emotion-3 emotion-7 emotion-5"
    />
    <div
      class="emotion-3 emotion-4 emotion-5"
    />
    <div
      class="emotion-3 emotion-4 emotion-5"
    />
    <div
      class="emotion-3 emotion-4 emotion-5"
    />
    <div
      class="emotion-3 emotion-4 emotion-5"
    />
    <div
      class="emotion-3 emotion-4 emotion-5"
    />
    <div
      class="emotion-3 emotion-4 emotion-5"
    />
    <div
      class="emotion-3 emotion-4 emotion-5"
    />
    <div
      class="emotion-3 emotion-31 emotion-5"
    />
  </div>
</DocumentFragment>
`;

exports[`DotSteps renders correctly wit 10 steps, default step=4 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.emotion-4.emotion-4 {
  margin-right: 8px;
}

.emotion-13 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  cursor: pointer;
}

.emotion-13.emotion-13 {
  margin-right: 8px;
}

.emotion-31 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.emotion-31.emotion-31 {
  margin-right: 0;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      class="emotion-3 emotion-4 emotion-5"
    />
    <div
      class="emotion-3 emotion-4 emotion-5"
    />
    <div
      class="emotion-3 emotion-4 emotion-5"
    />
    <div
      class="emotion-3 emotion-13 emotion-5"
    />
    <div
      class="emotion-3 emotion-4 emotion-5"
    />
    <div
      class="emotion-3 emotion-4 emotion-5"
    />
    <div
      class="emotion-3 emotion-4 emotion-5"
    />
    <div
      class="emotion-3 emotion-4 emotion-5"
    />
    <div
      class="emotion-3 emotion-4 emotion-5"
    />
    <div
      class="emotion-3 emotion-31 emotion-5"
    />
  </div>
</DocumentFragment>
`;
